--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="Test"
+name="BattleAlchemist"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../build/BattleAlchemist.exe"
+export_path="../build_battale_alchemist/release/windows/BattleAlchemist.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -42,14 +42,14 @@ application/trademarks=""
 
 [preset.1]
 
-name="HTML5"
+name="BattleAlchemist"
 platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../build/BattleAlchemist.html"
+export_path="../build_battale_alchemist/release/html5/BattleAlchemist.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -74,3 +74,28 @@ progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
 progressive_web_app/background_color=Color( 0, 0, 0, 1 )
+
+[preset.2]
+
+name="BattleAlchemist"
+platform="Linux/X11"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="../build_battale_alchemist/release/linux/BattleAlchemist.x86_64"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
